# url-shortener

./: Cargo.toml  README.md
cdk/: .gitignore  README.md  buildAndUploadSPA.ts  bun.lockb  cdk.json  package.json
cdk/lib/: index.ts
client/: bun.lockb  package.json  tailwind.config.ts
client/app/: .prettierrc.json  root.tsx
client/app/components/ui/: copy-to-clipboard.tsx
client/app/routes/: $key.tsx  _index.tsx
src/: database.rs  main.rs  util.rs
