[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
lambda_http = "0.10.0"
tokio = { version = "1", features = ["macros"] }
anyhow = "1.0.81"
dotenvy = "0.15.7"
clap = { version = "4", default-features = false, features = [
  "derive",
  "env",
  "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
fred = { version = "8.0.5", features = ["enable-rustls"] }
futures = "0.3.30"
tracing = "0.1.40"
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = "0.3"
# uuid = { version = "1.8.0", features = ["v4"] }
# sqids = "0.4.1"
nanoid = "0.4.0"
